# cell-eval

./: .gitignore  .python-version  README.md  eval_config.yaml  eval_utils.py  metric_evaluator.py  pyproject.toml  run_eval.py
.github/actions/: CI.yml
.github/workflows/: CI.yml  release.yml
config/: eval_config.yaml  replogle_config.yaml  tahoe_config.yaml
eval/: metric_evaluator.py  run_eval.py  utils.py
src/cell_eval/: __init__.py  __main__.py  _baseline.py  _evaluator.py  _score.py  data.py  metric_evaluator.py  utils.py
src/cell_eval/_cli/: __init__.py  _baseline.py  _const.py  _prep.py  _run.py  _score.py
src/cell_eval/_old/: metric_evaluator.py
src/cell_eval/_pipeline/: __init__.py  _runner.py
src/cell_eval/_types/: __init__.py  _anndata.py  _de.py  _enums.py
src/cell_eval/cli/: __init__.py  _metrics.py  _prep.py  _run.py
src/cell_eval/metrics/: __init__.py  _anndata.py  _de.py  _dict.py  _impl.py  _registry.py  anndata_metrics.py  array_metrics.py  base.py  de_metrics.py  pipeline.py  registry.py  types.py
src/state_eval/: __init__.py  __main__.py  de_utils.py  metric_evaluator.py  utils.py
src/vc_eval/: __main__.py  data.py  de_utils.py  metric_evaluator.py  utils.py
tests/: test_discrimination_score_dict.py  test_eval.py  test_utils.py
tutorials/vcc/: vcc.ipynb
