[project]
name = "state-eval"
version = "0.1.14"
description = "Evaluation metrics for single-cell perturbation predictions"
readme = "README.md"
authors = [
    { name = "Abhinav Adduri", email = "abhinav.adduri@arcinsistute.org" },
    { name = "Yusuf Roohani", email = "yusuf.roohani@arcinsistute.org" },
    { name = "Noam Teyssier", email = "noam.teyssier@arcinsistute.org" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "adjustpy>=0.1.1",
    "igraph>=0.11.8",
    "leidenalg>=0.10.2",
    "ott-jax>=0.5.0",
    "pdex>=0.1.3",
    "pyyaml>=6.0.2",
    "scanpy>=1.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.8"]

[project.scripts]
run_eval = "state_eval.__main__:main"
