[project]
name = "cell-eval"
version = "0.4.6"
description = "Evaluation metrics for single-cell perturbation predictions"
readme = "README.md"
authors = [
    { name = "Noam Teyssier", email = "noam.teyssier@arcinstitute.org" },
    { name = "Abhinav Adduri", email = "abhinav.adduri@arcinstitute.org" },
    { name = "Yusuf Roohani", email = "yusuf.roohani@arcinstitute.org" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "adjustpy>=0.1.1",
    "igraph>=0.11.8",
    "leidenalg>=0.10.2",
    "ott-jax>=0.5.0",
    "pdex>=0.1.8",
    "pyyaml>=6.0.2",
    "scanpy>=1.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pytest>=8.3.5", "ruff>=0.11.8"]

[project.scripts]
cell-eval = "cell_eval.__main__:main"

[tool.pyright]
venvPath = "."
venv = ".venv"
