[project]
name = "cell-eval"
version = "0.5.41"
description = "Evaluation metrics for single-cell perturbation predictions"
readme = "README.md"
authors = [
    { name = "Noam Teyssier", email = "noam.teyssier@arcinstitute.org" },
    { name = "Abhinav Adduri", email = "abhinav.adduri@arcinstitute.org" },
    { name = "Yusuf Roohani", email = "yusuf.roohani@arcinstitute.org" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "adjustpy>=0.1.1",
    "igraph>=0.11.8",
    "pdex>=0.1.18",
    "polars>=1.30.0",
    "pyyaml>=6.0.2",
    "scanpy>=1.10.3",
    "pyarrow>=18.0.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pytest>=8.3.5", "ruff>=0.11.8"]

[project.scripts]
cell-eval = "cell_eval.__main__:main"

[tool.pyright]
venvPath = "."
venv = ".venv"
